force-app/main/default/objects/Certification__c/fields/Certificant__c.field-meta.xml
<CustomField>
    <fullName>Certificant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The certified user</inlineHelpText>
    <label>Certificant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>