force-app/main/default/objects/Certification__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <length>255</length>
    <type>Text</type>
</CustomField>