force-app/main/default/objects/Certification__c/fields/Date_Confidentiality_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Confidentiality_Agreement_Signed__c</fullName>
    <label>Date Confidentiality Agreement Signed</label>
    <type>Date</type>
</CustomField>