force-app/main/default/objects/Certification__c/fields/Expiration_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Renewal_Date__c</fullName>
    <label>Expiration/Renewal Date</label>
    <type>Date</type>
</CustomField>