force-app/main/default/objects/Certification__c/fields/Last_Training_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Training_Completed_On__c</fullName>
    <label>Last Training Completed On</label>
    <type>Date</type>
</CustomField>