force-app/main/default/objects/Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Certificant__c</columns>
    <columns>Course__c</columns>
    <columns>Date_Confidentiality_Agreement_Signed__c</columns>
    <columns>Expiration_Renewal_Date__c</columns>
    <columns>Last_Training_Completed_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>CEO</role>
        <role>DevOps</role>
    </sharedTo>
</ListView>